--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -72,7 +72,7 @@ if (SAME) {
 }
 ```
 
-```{r summary-info, echo = FALSE, fig.width = 12, fig.height = 6, message = FALSE, include = FALSE}
+```{r summary-info, echo = FALSE, message = FALSE}
 if(!SAME) {
   # Organize data
   output %>%
@@ -119,7 +119,12 @@ if(!SAME) {
   summary_table <- cbind(squares, NRMSE)
   knitr::kable(summary_table, digits = 3, 
                format.args = list(nsmall = 3, scientific = FALSE))
-  
+}
+```
+
+``` {r graph, echo = FALSE, fig.width = 12, fig.height = 6, message = FALSE, include = FALSE}
+
+if(!SAME) {
   # Plot of numerical differences between versions
   units <- c(unique(differences$units))
   # Sort variables so that legend works
