--- a/vignettes/manual/Unitvals.Rmd
+++ b/vignettes/manual/Unitvals.Rmd
@@ -4,7 +4,7 @@ title: Unit values (`unitvals`)
 
 Hector both *allows* (internally to each component, and when reading inputs) and *requires* (passing data between components, and writing outputs) values to have associated **units**. The internal unit system is simple, not providing [unit conversion](http://www.boost.org/doc/libs/1_57_0/doc/html/boost_units.html) for example, but also lightweight and easy. Our use of units is prompted primarily by safety–to avoid the "Mars Climate Orbiter" [problem](http://en.wikipedia.org/wiki/Mars_Climate_Orbiter#Cause_of_failure) of mismatched unit–as well as having easy-to-interpret outputs.
 
-The internal C++ type is called `unitval`, and its code is located in `headers/data/unitval.hpp`.
+The internal C++ type is called `unitval`, and its code is located in `headers/data/unitval.hpp`. (There is also a restricted type of `unitval` called a `fluxpool` that allows only non-negative values.)
 
 Creating a variable with associated unit
 --------------
@@ -34,6 +34,8 @@ Internally within components, we often simply want to work with numbers, extract
 double x = y.value(U_PGC); # we assert that y's units are petagrams C
 ```
 
+The core will throw an error if we get the results of `y` wrong.
+
 When is `unitval` required?
 --------------
 Using `unitvals` *within* a component is optional, but it's required when passing data *between* components. This falls into three categories:
@@ -42,17 +44,6 @@ Using `unitvals` *within* a component is optional, but it's required when passin
 * Responding to a query for data.
 * Output. Read more about Hector's [output visitors](OutputVisitors.html).
 
-When is `unitval` optional?
---------------
-In input files.
-
-TODO.
-
-```
-if( varName == D_PREINDUSTRIAL_N2O ) {`
-            `H_ASSERT( data.date == Core::undefinedIndex() , "date not allowed" );`
-            `N0 = unitval::parse_unitval( data.value_str, data.units_str, U_PPBV_N2O );`
-```
 
 Missing values
 --------------
@@ -63,9 +54,7 @@ Why this complexity?
 R (and, by extension, Rcpp) distinguish between two kinds of "placeholder" numeric values:
 A _missing_ value (`NA_real_` in R; often abbreviated to `NA`) represents an unobserved value; for instance, if you take annual observations from 1990 to 2000 but failed to make a measurement in 1996.
 On the other hand, _not a number_ (`NaN`) represents the result of an invalid mathematical operation, such as taking the square root of a negative number.
-Both of these values propagate through any calculations in which they are involved, both in R and C++, and both can be detected and removed by R's `is.na()` function and removed by `na.omit`, `na.rm = TRUE`, and friends.
-(The R function `is.nan()` can used to check specifically for `NaN` values -- `is.nan(NaN) => TRUE`, but `is.nan(NA) => FALSE`).
+
+Both of these values propagate through any calculations in which they are involved, both in R and C++, and can be detected and removed by R's `is.na()` and similar functions.
+(Note that the R function `is.nan()` can be used to check specifically for `NaN` values -- `is.nan(NaN) => TRUE`, but `is.nan(NA) => FALSE`).
 However, because they mean fundamentally different things (and suggest different errors), we try to preserve this distinction if we can.
-(For example, if some code you run returns `NA` then you would suspect that required values were not set somewhere.
-On the other hand, if the code returns `NaN`, you know that all values were set but resulted in a mathematically invalid calculation.
-Your approach to debugging these problems would likely be different.)
